--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ input {
   padding: 0.25rem;
   width: 100px;
   text-align: center;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 p, h1 {
