--- a/src/app.less
+++ b/src/app.less
@@ -21,6 +21,10 @@
 #process-page {
   margin: auto;
   max-width: 1000px;
+
+  h2 {
+    margin-bottom: 20px;
+  }
 }
 
 .control {
@@ -74,12 +78,22 @@
     }
   }
 
+  & h2 {
+    margin-left: 9px !important;
+  }
+
   & .name {
     font-size: 1.5em;
     font-weight: bold;
 
     width: 15rem;
     text-align: left;
+
+    background: transparent;
+
+    border: none;
+    border-radius: 0;
+    border-bottom: 2px solid #424242;
   }
 }
 
