--- a/src/app.less
+++ b/src/app.less
@@ -98,6 +98,10 @@
     border: none;
     border-radius: 0;
     border-bottom: 2px solid #424242;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
