--- a/src/index.less
+++ b/src/index.less
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: #213547;
   background-color: #ffffff;
 
@@ -58,12 +57,9 @@ button {
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
-  transition: all 0.25s;
+  transition: all 0.25s ease, outline-width 0s, outline-color 0s;
 
-  box-shadow:
-          0 0 0 rgba(0, 0, 0, 0.121),
-          0 0 1px rgba(0, 0, 0, 0.179),
-          0 2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.121), 0 0 1px rgba(0, 0, 0, 0.179), 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 button:hover {
@@ -71,20 +67,24 @@ button:hover {
   color: white;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button:active {
   box-shadow: none;
 }
 
-button:disabled, button[disabled] {
-  background-color: #f9f9f9;
-  color: rgba(16, 16, 16, 0.3);
-  cursor: auto;
-  box-shadow: none;
+button:focus, button:focus-visible {
+  outline: #646cff solid 2px;
+  outline-offset: -2px;
+
+  &.red-button {
+    outline: 2px solid #d25454;
+  }
+
+  &.green-button {
+    outline: 2px solid #84c46d;
+  }
 }
 
-button:disabled:hover, button[disabled]:hover {
+button:disabled, button[disabled], button:disabled:hover, button[disabled]:hover {
   background-color: #f9f9f9;
   color: rgba(16, 16, 16, 0.3);
   cursor: auto;
