--- a/src/app.less
+++ b/src/app.less
@@ -142,6 +142,25 @@
   }
 }
 
+#config-page {
+  margin: auto;
+  max-width: 1000px;
+
+  .option {
+    width: fit-content;
+    margin: 1rem 0;
+
+    background-color: #f8f8f8;
+    border: 1px solid #9d9d9d;
+    border-radius: 5px;
+  }
+
+  .option > * {
+    display: inline-block;
+    margin: 1rem;
+  }
+}
+
 .edit tr td:last-child .red-button {
   height: 44px;
   box-shadow: none;
