--- a/src/index.less
+++ b/src/index.less
@@ -48,6 +48,10 @@ p, h1 {
   background: #84c46d;
 }
 
+.red-input, .red-input:focus {
+  border: 1px solid #d25454 !important;
+}
+
 button {
   background-color: #f9f9f9;
   border-radius: 8px;
